multiple fixes: the disign is theorically finished!
fix page starting zoomed in on mobile phone.

resized icon for discord integrations to be smaller. (maybe tweak again)

fix matrix animation reloading when scrolling on firefox mobile

commented line in js for dark mode switcher, a unused and creating a console error.

added margin-top for articles list

fix 1 article taking tto much size on mobile because too long string without spaces.

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -333,6 +333,7 @@ ul ul {
     background-color: var(--color-bg-main);
     display: block;
     padding: 1rem;
+    margin-top: 0.5rem;
     border-bottom: 1px solid var(--color-border-light);
 }
 
